<resources>
    <string name="app_name">Naturquiz</string>
    <string name="hva_vil_du">Hva vil du lære?</string>
    <string name="fugler">Fugler</string>
    <string name="sommerfugler">Sommerfugler</string>
    <string name="trar">Trær</string>
    <string name="blomster">Blomster</string>
    <string name="sopp">Sopp</string>
    <string name="dyr">Dyr</string>
    <string name="logg_inn">Logg inn</string>
    <string name="oppgrader">Oppgrader</string>
    <string name="oppgrader_na">Oppgrader nå</string>
    <string name="oppgrader_reklame">Ingen reklame</string>
    <string name="oppgrader_reklame_tekst">Å lagre dine poeng og fremdrift på en ekstern server, koster penger.\n\nNaturquiz er i utgangspuntket reklamefinansiert, men dersom du ønsker å betale for å unngå reklamen, kan du selvsagt det.</string>
    <string name="du_har_oppgradert">Du har oppgradert</string>
    <string name="pris">Pris: %s</string>
    <string name="gjett_og_lar">Gjett og lær!</string>
    <string name="help">Hjelp</string>
    <string name="reklame_banner">ca-app-pub-7294544591458258/6662662729</string>
    <string name="reklame_helside">ca-app-pub-7294544591458258/7171350066</string>
    <string name="planter">planter</string>
    <string name="insekt">Småkryp</string>
    <string name="ekorn">Ekorn</string>
    <string name="bilder">Bilder</string>
    <string name="lyd">Lyd</string>
    <string name="vingespenn">Vingespenn</string>
    <string name="vekt">Vekt</string>
    <string name="kjenner_du_naturen">Kjenner du\nnaturen vår?</string>
    <string name="logg_inn_for_a_delta">Logg inn for å delta</string>
    <string name="hoyde">Høyde</string>
    <string name="bregner">Bregner</string>
    <string name="edderkopper">Edderkopper</string>
    <string name="biller">Biller</string>
    <string name="fotspor">Fotspor</string>
    <string name="lengde">Lengde</string>
    <string name="demo">Demo:</string>
    <string name="delta_i_daglige_konkurranser">Delta i daglige konkurranser for å bli ukens vinner</string>
    <string name="velg_en_kategori">Velg en kategori</string>
    <string name="velg_en_artsgruppe">Velg en artsgruppe</string>
    <string name="hvilken_fugl">Hvilken fugl?</string>
    <string name="hvilken_sommerfugl">Hvilken sommerfugl?</string>
    <string name="hvilken_blomst">Hvilken blomst?</string>
    <string name="hvilket_tre">Hvilket tre?</string>
    <string name="hvilken_bregne">Hvilken bregne?</string>
    <string name="hvilken_sopp">Hvilken sopp?</string>
    <string name="hvilket_dyr">Hvilket dyr</string>
    <string name="hvilket_insekt">Hvilket insekt?</string>
    <string name="hvilken_edderkopp">Hvilken edderkopp?</string>
    <string name="mangler_internett">Mangler internett</string>
    <string name="alternativ_nr1">Alternativ 1</string>
    <string name="alternativ_nr2">Alternativ 2</string>
    <string name="alternativ_nr3">Alternativ 3</string>
    <string name="alternativ_nr4">Alternativ 4</string>
    <string name="type">Type</string>
    <string name="klikk_forminske">Klikk for å forminske bildet</string>
    <string name="poeng_d">Poeng: %d</string>
    <string name="poeng">poeng</string>
    <string name="meny">Meny</string>
    <string name="menu_start">Start</string>
    <string name="spm_av_total">%d/%d</string>
    <string name="gratulerer">Gratulerer!</string>
    <string name="ny_personlig_rekord">Ny personlig rekord</string>
    <string name="neste">Neste</string>
    <string name="level">Nivå: </string>
    <string name="forrige">Forrige</string>
    <string name="dine_poeng">Dine poeng:</string>
    <string name="din_rekord_pa">Din rekord på %s: %d</string>
    <string name="igjen">Prøv igjen</string>
    <string name="hjem">Hjem</string>
    <string name="du_fikk_poeng">Du fikk %d poeng</string>
    <string name="logg_inn_for_a_konkurrere_med_andre">Logg inn for å konkurrere med andre</string>
    <string name="oppgrader_for_a_konkurrere_med_andre">Oppgrader for å konkurrere med andre</string>
    <string name="ingen_poeng_enda">Ingen poeng enda</string>
    <string name="historie">Historie</string>
    <string name="min_profil">Min profil</string>
    <string name="mine_grupper">Mine grupper</string>
    <string name="rekorder">Rekorder</string>
    <string name="liste_fugler">Liste av fugler</string>
    <string name="lister">Lister</string>
    <string name="meny_om">Om…</string>
    <string name="meny_lukk">Lukk</string>
    <string name="copyright">Copyright</string>
    <string name="eier">Eier:</string>
    <string name="lukk">Lukk</string>
    <string name="lisens">Lisens:</string>
    <string name="lenke">Lenke</string>
    <string name="arter">Arter</string>
    <string name="nytt_brukernavn_hint">Nytt brukernavn</string>
    <string name="bytt_brukernavn">Bytt brukernavn</string>
    <string name="avbryt">Avbryt</string>
    <string name="eller">eller</string>
    <string name="opprett_bruker">Opprett bruker</string>
    <string name="glemt_passord">Glemt passord</string>
    <string name="logg_ut">Logg ut</string>
    <string name="du_har_logget_inn">Du er nå logget inn</string>
    <string name="fortsett">Fortsett</string>
    <string name="epost_hint">Epost</string>
    <string name="passord">Passord</string>
    <string name="du_har_opprettet_din_bruker">Du har nå opprettet din bruker</string>
    <string name="gjenta_passord">Gjenta passord</string>
    <string name="velg_niva">Velg nivå</string>
    <string name="start">Start</string>
    <string name="level_forklart"><b>Demo:</b> 10 arter
        \n<b>Lett</b>: 50 av de mest kjente artene
        \n<b>Medium</b>: 125 av de mest kjente artene
        \n<b>Vanskelig</b>: 200 av de mest kjente artene
        \n<b>Ekspert</b>: Mer enn 350 arter
        </string>
    <string name="level_forklart_dyr"><b>Demo:</b> 10 arter
        \n<b>Lett</b>: 25 arter
        \n<b>Medium</b>: 50 artere
        \n<b>Vanskelig</b>: 75 arter
        \n<b>Ekspert</b>: 100 arter
        </string>
    <string name="last_level">Låst nivå</string>
    <string name="unlock">"Lås opp ved å spille:"</string>
    <string name="mine_poeng">Mine poeng</string>
    <string name="dato">Dato</string>
    <string name="logg_inn_for_a_spille_flere_niva">Logg inn for å spille flere nivå</string>
    <string name="logg_inn_for_a_lagre_rekorder">Logg inn for å lagre rekordene dine</string>
    <string name="kategori">Kategori</string>
    <string name="niva">Nivå</string>
    <string name="velkommen">Velkommen</string>
    <string name="om_naturquiz">Om Naturquiz</string>
    <string name="om_Q1">Hvorfor må jeg se reklame?</string>
    <string name="om_A1">Vel, å lagre dine rekorder og fremdrift på en ekstern server, koster penger. Naturquiz er reklamefinansiert slik at du vises reklame i stedet for å betale med penger. Forhåpentligvis er reklamene litt relevante for deg.</string>
    <string name="om_Q2">Må jeg være koblet til internett for å spille?</string>
    <string name="om_A2">Ja. Bildene i Naturquiz tar mye plass og ligger derfor på en eksern server i stedet for hos deg. Du henter kun ned akkurat de bildene du trenger.</string>
    <string name="om_Q3">Hvordan kan jeg finne mer informasjon om artene og registrere egne funn?</string>
    <string name="om_A3">Kanskje appen Naturfunn er noe for deg?</string>
    <string name="om_Q4">Hva hvis jeg finner noe som ikke er riktig?</string>
    <string name="om_A4">Da vil vi svært gjerne høre fra deg! Flott hvis du sender en epost (naturfunn@kunnskapsgnist.no) slik at vi kan rette opp feilen.</string>
    <string name="om_Q5">Hvordan får jeg vanskeligere spørsmål?</string>
    <string name="om_A5">Du logger inn og spiller de enkle nivåene først. Hvert nivå åpnes ved å spille forrige nivå. </string>
    <string name="om_Q6">Hvor mange arter inneholder appen?</string>
    <string name="om_A6">Svært mange. Mer enn 300 fugler, 500 planter, 300 sommerfugler osv.</string>
    <string name="om_Q7">Hva avgjør om en art er med i Naturquiz?</string>
    <string name="om_A7">Hvilke arter som er med, er basert på antall observasjoner i www.artsobservasjoner.no. For eksempel inneholder nivået lett de artene som er observert flest ganger. </string>
    <string name="om_Q8">Er antall spørmsål begrenset?</string>
    <string name="om_A8">Tja, spørsmålene er generert automatisk. Hvis du spiller et nivå med 50 arter, finnes det mer enn 5.5 million kombinasjoner av fire arter. Du kan se på det som uendelig mange.</string>
    <string name="om_Q9">Hva hvis jeg jukser og finner svarene i bøkene eller på nett mens jeg spiller?</string>
    <string name="om_A9">Vel, du risikerer å lære mer.</string>
    <string name="om_Q10">Hva hvis jeg ikke vet svarene?</string>
    <string name="om_A10">Gjett.</string>
    <string name="om_Q11">Kan jeg konkurrere mot andre?</string>
    <string name="om_A11">Ikke foreløpig. Dersom du ønsker det, send en epost til naturfunn@kunnskapsgnist.no.</string>
    <string name="om_Q12">Hvor mange poeng er det mulig å få totalt?</string>
    <string name="om_A12">Du kan maksimalt få 30 000 poeng hvis du svarer riktig raskt på alle spørsmålene. Maksimum poeng per spørsmål er 3000 eller 5000 avhengig av antall spørsmål i runden.</string>
    <string name="om_Q13">Hvordan beregnes poengene?</string>
    <string name="om_A13">Etter en kort reaksjonstid der bildene lastes ned, avtar poengene du kan få gradvis fra maksimum poeng til en femtedel (etter 10 sekunder). Hvis du må dra noe fra et sted til et annet, er tidsskalaen strukket fra maksimalt 10 til 20 sekunder. Trenger du flere forsøk, avtar poengene med en tredjedel for hvert forsøk.</string>
    <string name="om_Q14">Hvor kan jeg finne mer informasjon om Naturquiz?</string>
    <string name="om_A14">Besøk nettsiden: www.kunnskapsgnist.no.</string>
    <string name="plasser_fuglene_fra_kortest_til_lengst">Plasser fuglene fra\nminst til størst vingespenn</string>
    <string name="plasser_fuglene_fra_lettest_til_tyngst">Plasser fuglene fra\nden letteste til den tyngste</string>
    <string name="plasser_sommerfuglene_fra_kortest_til_lengst">Plasser sommerfuglene fra\nminst til størst vingespenn</string>
    <string name="plasser_dyrene_fra_minst_til_lengst">Plasser dyrene fra\nden minste til den lengste</string>
    <string name="plasser_dyrene_fra_lettest_til_tyngst">Plasser dyrene fra\nden letteste til den tyngste</string>
    <string name="svar">Svar</string>
    <string name="riktig">Riktig</string>
    <string name="noen_rett_prov_igjen">%d riktig. Prøv igjen!</string>
    <string name="ingen_rett_prov_igjen">Ingen riktig. Prøv igjen!</string>
    <string name="avgi_svar">Avgi svar</string>
    <string name="hold_og_dra_for_a_bytte_plass">Hold og dra for å bytte plass</string>
    <string name="dekorasjon">Dekorasjonsfugl</string>
    <string name="klikk_forstorre">Klikk for å forstørre</string>
    <string name="klikk">Klikk</string>
    <string name="gjett_art">Gjett_art</string>
    <string name="prestasjoner">Prestasjoner</string>
    <string name="mine_prestasjoner">Mine\nprestasjoner</string>
    <string name="min_rekord">Min rekord: %d</string>
    <string name="dra_fotspor_til_riktig_dyr">Dra fotsporene til riktig dyr</string>
    <string name="logg_inn_for_oppgradering">(Du må logge inn før du kan oppgradere)</string>
    <string name="henter_reklame">Henter reklame…</string>
    <string name="navn">Navn</string>
</resources>