<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bla"
        tools:context="com.kunnskapsgnist.boardgamebattle.Menu_about">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/om_naturquiz" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q1" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A1" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q2" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A2" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q3" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A3" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q4" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A4" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q5" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A5" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q6" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A6" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q7" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A7" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q8" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A8" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q9" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A9" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q10" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A10" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q11" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A11" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q12" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A12" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q13" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A13" />

                <TextView
                    style="@style/tekst_Q"
                    android:text="@string/om_Q14" />

                <TextView
                    style="@style/tekst_A"
                    android:text="@string/om_A14" />

                <!--
                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graf_tidsfaktor"
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:seriesColor="@color/hvit"
                    android:padding="16dp" />
-->
                <TextView
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/gjett_og_lar" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingBottom="20dp"
                    app:srcCompat="@drawable/fugl"
                    android:contentDescription="@string/fugler" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>