<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/meny_nedtrekk"
            android:icon="@drawable/meny"
            android:iconTint="@color/hvit"
            android:orderInCategory="1"
            android:title="@string/meny"
            app:showAsAction="ifRoom">

                <menu>
                        <item
                            android:title="@string/menu_start"
                            android:id="@+id/meny_start"
                            android:orderInCategory="0"
                            android:icon="@drawable/symbol_start"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never" />

                        <item android:title="@string/min_profil"
                            android:id="@+id/meny_profil"
                            android:orderInCategory="1"
                            android:icon="@drawable/symbol_profil"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never"/>

                        <item android:title="@string/mine_poeng"
                            android:id="@+id/meny_historie"
                            android:orderInCategory="2"
                            android:icon="@drawable/symbol_rekorder"
                            android:iconTint="@color/svart"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never" />

                        <item android:title="@string/prestasjoner"
                            android:id="@+id/meny_prestasjoner"
                            android:orderInCategory="3"
                            android:icon="@drawable/symbol_prestasjon"
                            android:iconTint="@color/svart"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never" />

                        <item android:title="@string/arter"
                            android:id="@+id/meny_arter"
                            android:orderInCategory="4"
                            android:icon="@drawable/symbol_bok"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never" />

                        <item android:title="@string/oppgrader"
                            android:id="@+id/meny_oppgrader"
                            android:orderInCategory="5"
                            android:icon="@drawable/symbol_oppgrader"
                            android:iconTint="@color/svart"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never"/>

                        <item android:title="@string/meny_om"
                            android:id="@+id/meny_om"
                            android:orderInCategory="6"
                            android:icon="@drawable/symbol_om"
                            android:iconTint="@color/svart"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never"/>

                        <item android:title="@string/meny_lukk"
                            android:id="@+id/meny_lukk"
                            android:orderInCategory="7"
                            android:icon="@drawable/symbol_lukk"
                            android:iconTint="@color/svart"
                            app:itemTextColor="@color/svart"
                            app:showAsAction="never"/>
                </menu>
    </item>
</menu>