<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bla"
        tools:context="com.kunnskapsgnist.naturquiz.Meny_oppgradering">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/oppgrader_tittel"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="16dp"
                    android:text="@string/oppgrader" />

                <!-- Reklame -->
                <TextView android:id="@+id/oppgrader_reklame"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_marginTop="24dp"
                    android:background="@color/bla_lys"
                    android:textSize="25sp"
                    android:padding="6dp"
                    app:layout_constraintTop_toBottomOf="@id/oppgrader_tittel"
                    android:text="@string/oppgrader_reklame"/>

                <TextView android:id="@+id/oppgrader_reklame_tekst"
                    style="@style/tekst"
                    android:text="@string/oppgrader_reklame_tekst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/oppgrader_reklame"
                    android:padding="6dp"/>

                <Button android:id="@+id/oppgrader_knapp"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:text="@string/oppgrader_na"
                    android:contentDescription="@string/oppgrader_na"
                    app:cornerRadius="10dp"
                    android:layout_marginTop="26dp"
                    app:layout_constraintTop_toBottomOf="@id/oppgrader_reklame_tekst"
                    android:gravity="center"/>

                <TextView android:id="@+id/oppgrader_pris"
                    style="@style/tekst"
                    android:gravity="center_horizontal"
                    android:text="@string/pris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@id/oppgrader_knapp"
                    android:paddingHorizontal="6dp"/>

                <!-- Fugler -->
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/fugl"
                    android:contentDescription="@string/fugler"
                    app:layout_constraintTop_toTopOf="@id/oppgrader_reklame"
                    app:layout_constraintBottom_toBottomOf="@id/oppgrader_reklame"
                    />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/fugl"
                    android:scaleX="-1"
                    android:contentDescription="@string/fugler"
                    app:layout_constraintTop_toTopOf="@id/oppgrader_reklame"
                    app:layout_constraintBottom_toBottomOf="@id/oppgrader_reklame"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>